# logrodzyni

./: .gitignore  CMakeLists.txt  PLANNING.md  README.md
.github/workflows/: build.yml  deploy-pages.yml  security-scan.yml
deploy/: Dockerfile.proxy-core  Dockerfile.web-app  docker-compose.yml
deploy/configs/: dev.env.example  prod.env.example
deploy/nginx/: nginx.conf
deploy/runbooks/: incident-response.md  key-rotation.md  scaling.md
docs/: api-spec.md  architecture.md  operator-playbook.md  security-model.md
masking-client/: CMakeLists.txt
masking-client/config/: client.conf.example
masking-client/include/: kill_switch.hpp  masking_client.hpp  profile_manager.hpp
masking-client/src/: kill_switch.cpp  main.cpp  masking_client.cpp  profile_manager.cpp
proxy-core/: CMakeLists.txt
proxy-core/config/: proxy.conf.example
proxy-core/include/: config.hpp  connection_manager.hpp  logger.hpp  policy_engine.hpp  proxy_server.hpp  rate_limiter.hpp  session.hpp
proxy-core/src/: config.cpp  connection_manager.cpp  main.cpp  policy_engine.cpp  proxy_server.cpp  rate_limiter.cpp  session.cpp
proxy-core/tests/: test_policy_engine.cpp  test_rate_limiter.cpp
shared-security/: CMakeLists.txt
shared-security/include/: cert_manager.hpp  crypto.hpp  tls_context.hpp
shared-security/src/: cert_manager.cpp  crypto.cpp  tls_context.cpp
web-app/: package-lock.json  package.json
web-app/public/: app.js  index.html
web-app/src/: config.js  db.js  server.js
web-app/src/middleware/: auth.js  rbac.js
web-app/src/routes/: account.js  audit.js  auth.js  nodes.js  policies.js  sessions.js
web-app/src/utils/: audit.js  logger.js
web-app/tests/: account.test.js  auth.test.js  nodes.test.js
